--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
-		"@effect/schema": "^0.67.0",
-		"@reduxjs/toolkit": "^2.2.4",
-		"effect": "^3.1.3",
+		"@effect/schema": "^0.67.10",
+		"@reduxjs/toolkit": "^2.2.5",
+		"effect": "^3.2.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
-		"@storybook/addon-essentials": "^8.1.1",
-		"@storybook/addon-interactions": "^8.1.1",
-		"@storybook/addon-links": "^8.1.1",
-		"@storybook/blocks": "^8.1.1",
-		"@storybook/react": "^8.1.1",
-		"@storybook/react-vite": "^8.1.1",
-		"@storybook/test": "^8.1.1",
-		"@types/react": "^18.3.1",
+		"@storybook/addon-essentials": "^8.1.2",
+		"@storybook/addon-interactions": "^8.1.2",
+		"@storybook/addon-links": "^8.1.2",
+		"@storybook/blocks": "^8.1.2",
+		"@storybook/preview-api": "^8.1.2",
+		"@storybook/react": "^8.1.2",
+		"@storybook/react-vite": "^8.1.2",
+		"@storybook/test": "^8.1.2",
+		"@types/react": "^18.3.2",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react-swc": "^3.6.0",
 		"@vitest/ui": "^1.6.0",
 		"jsdom": "^24.0.0",
-		"storybook": "^8.1.1",
+		"storybook": "^8.1.2",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.11",
 		"vite-tsconfig-paths": "^4.3.2",
